# airflow-docker-etl

./: .gitignore  Makefile  README.md
airflow/dags/: dag.py
data/processed/csv/customer_courier_conversations/: .part-00000-32d63c05-0feb-4413-9946-d20ccb919f4c-c000.csv.crc  part-00000-32d63c05-0feb-4413-9946-d20ccb919f4c-c000.csv
data/processed/parquet/customer_courier_conversations/: .part-00000-34f329fd-7b0a-4f7b-9f8f-7aac663fb095-c000.snappy.parquet.crc  part-00000-34f329fd-7b0a-4f7b-9f8f-7aac663fb095-c000.snappy.parquet
data/source/: customer_courier_chat_messages_2024_01_11_23_11_32.json  orders_2024_01_11_23_11_32.json
etl/: .env  docker-compose.yml  pyproject.toml
etl/airflow/: Dockerfile
etl/resources/app/: application.py
etl/spark_app/: main.py  settings.py
test-data-generation/: Dockerfile  docker-compose.yml  pyproject.toml
test-data-generation/generation/: main.py  settings.py  utils.py
