[tool.poetry]
name = "etl"
version = "0.1.0"
description = ""
authors = ["Semaputnik <semyon.putnikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.5"
apache-airflow = "^2.8.0"
pyspark = "^3.5.0"
apache-airflow-providers-apache-spark = "^4.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
