[tool.poetry]
name = "etl"
version = "0.1.0"
description = ""
authors = ["Semaputnik <semyon.putnikov@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
my-script = "spark_app:main"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.0"
pydantic-settings = "^2.1.0"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
